--- a/CodetestPackage/main/default/classes/questionExplorerController.cls
+++ b/CodetestPackage/main/default/classes/questionExplorerController.cls
@@ -1,10 +1,10 @@
 public with sharing class questionExplorerController {
     @AuraEnabled
-    public static List<Question__c> getQuestionSet(){
+    public static List<Question__c> getQuestionSet(String username){
         QuestionSet__c questionSet;
         List<Question__c> questionList = new List<Question__c>();
         try {
-            questionSet = [SELECT Name, (SELECT QuestionSet__c,Question__c FROM QuestionSetEntries__r) FROM QuestionSet__c LIMIT 1];
+            questionSet = [SELECT Name, (SELECT QuestionSet__c,Question__c FROM QuestionSetEntries__r) FROM QuestionSet__c WHERE user__c = :username LIMIT 1];
         } catch (Exception e) {
             throw new AuraHandledException(e.getMessage());
         }
